--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "@types/vuelidate": "^0.7.13",
+        "axios": "^0.21.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
@@ -23,6 +24,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
+        "vuelidate": "^0.7.6",
         "vuetify": "^2.3.4"
     }
 }
