--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,12 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1"
+        "laravel/ui": "^2.1",
+        "league/oauth2-client": "^2.6",
+        "maatwebsite/excel": "^3.1",
+        "microsoft/microsoft-graph": "^1.29"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
