--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "buefy": "^0.9.4",
         "laravel-vue-pagination": "^2.3.1",
         "vue": "^2.6.11",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.3.4",
         "vue-select": "^3.11.2",
+        "vue-sweetalert2": "^4.2.1",
+        "vue-toast-notification": "^0.6.1",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.3.4"
     }
