--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "beyondcode/laravel-websockets": "^1.12",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -18,7 +19,8 @@
         "laravel/ui": "^2.1",
         "league/oauth2-client": "^2.6",
         "maatwebsite/excel": "^3.1",
-        "microsoft/microsoft-graph": "^1.29"
+        "microsoft/microsoft-graph": "^1.29",
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
