--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "buefy": "^0.9.7",
-        "dotenv": "^6.2.0",
+        "chart.js": "^2.9.4",
         "laravel-echo": "^1.10.0",
         "laravel-vue-pagination": "^2.3.1",
         "pusher-js": "^7.0.3",
         "vue": "^2.6.11",
+        "vue-chartjs": "^3.5.1",
         "vue-multiselect": "^2.1.6",
         "vue-pdf": "^4.2.0",
         "vue-router": "^3.3.4",
         "vue-select": "^3.11.2",
         "vue-sweetalert2": "^4.3.1",
-        "vue-toast-notification": "^0.6.1",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.4.11"
     }
