--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
         "vue-sweetalert2": "^4.3.1",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.5.0"
+    },
+    "engines": {
+        "node": "14.16.1",
+        "npm": "4.14.12"
     }
 }
