--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "postinstall": "npm run production",
         "heroku-prebuild": "npm install -f",
-        "heroku-postbuild": "npm run production"
+        "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
         "@types/vuelidate": "^0.7.14",
