--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ MIX_URL=http://localhost:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=remotemysql.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rHXPfGsnZo
-DB_USERNAME=rHXPfGsnZo
-DB_PASSWORD=hL5V9Wuf4O
+DB_DATABASE=cofat
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
