--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "facade/ignition": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
-        "heroku/heroku-buildpack-php": "dev-master"
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
